# FMO-CC

./: LICENSE  README.md  input.json  pyproject.toml  run_fmo_cc.py  setup.sh
Scripts/: run_fmo_cc.py  run_gamess.sh  twoeint_process.sh
fmocc/src/: diagrams.py
src/: MP2.py  cc_symmetrize.py  cc_update.py  fmo_extractor.py  fmo_processor.py  logger.py  main_parallel.py
src/fmocc/: MP2.py  __init__.py  __main__.py  diagrams.py  fmo_calculator.py  fmo_config.py  fmo_extractor.py  fmo_processor.py  main_parallel.py  utils.py
